--- a/SEM-05/php/assets/css/html-01.css
+++ b/SEM-05/php/assets/css/html-01.css
@@ -1,27 +1,27 @@
 input[type="text"]{
 	outline: none;
-	border: 2px solid black;
-	border-radius: 15px;
+	border: 1px solid black;
+	border-radius: 4px;
 	width: 50%;
-	height: 40px;
+	height: 25px;
 	margin: 10px;
 	text-align: center;
 }
 
 input[type="password"]{
 	outline: none;
-	border: 2px solid black;
-	border-radius: 15px;
+	border: 1px solid black;
+	border-radius: 4px;
 	width: 50%;
-	height: 40px;
+	height: 25px;
 	margin: 10px;
 	text-align: center;
 }
 
 textarea{
-	outline: none;
-	border: 2px solid black;
-	border-radius: 15px;
+	/* outline: none; */
+	border: 1px solid black;
+	border-radius: 4px;
 	width: 60%;
 	margin: 10px;
 	text-align: center;
@@ -29,17 +29,17 @@ textarea{
 }
 
 input[type="submit"]{
-	border: 2px solid green;
-	border-radius: 15px;
+	border: 1px solid green;
+	border-radius: 4px;
 	margin: 10px;
-	padding: 10px 20px;
+	padding: 6px 20px;
 	text-align: center;
 }
 
 input[type="reset"]{
-	border: 2px solid red;
-	border-radius: 15px;
+	border: 1px solid red;
+	border-radius: 4px;
 	margin: 10px;
-	padding: 10px 20px;
+	padding: 6px 20px;
 	text-align: center;
 }
